<resources>
    <string name="app_name">MFRBM</string>
    <string name="start_new">Nuevo</string>
    <string name="brush">Brocha</string>
    <string name="erase">Borrar</string>
    <string name="save">Guardar</string>
    <string name="paint">Pintar</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="correo_IS">Correo electrónico</string>
    <string name="clave_IS">Contraseña</string>
    <string name="ingresar_IS">I N G R E S A R</string>
    <string name="registrate_IS">¡ Regístrate !</string>
    <string name="formar_IS">Se parte de nosotros.</string>
    <string name="titulo_RU">Crea tu cuenta</string>
    <string name="email_RU">Email</string>
    <string name="clave_RU">Contraseña(6 caracteres)</string>
    <string name="confirmarClava_RU">Confirmar contraseña</string>
    <string name="nombreUsuario_RU">Nombre usuario</string>
    <string name="apellidoUsuario_RU">Apellido usuario</string>
    <string name="crearCuenta_RU">Crear mi cuenta</string>
    <string name="preguntaComunidad_RU">¿Ya eres parte de nuestra comunidad?</string>
    <string name="iniciaSesion_RU">¡ Iniciar sesión !</string>
    <string name="cambiarEmail_UC">Cambiar email</string>
    <string name="cambiarClave_UC">Cambiar contraseña</string>
    <string name="eliminarCuenta_UC">Eliminar mi cuenta</string>
    <string name="cerrarSesion_UC"> Cerrar sesión </string>
    <string name="misBitacoras_B">Mis Bitácoras</string>
    <string name="nombreBitacora_B">Bitácora 01</string>
    <string name="nombreMuestreo">Mis Muestreos</string>
    <string name="color_B">#fff</string>
    <string name="dimension_B">7 cm</string>
    <string name="textura">Textura</string>
    <string name="forma">Forma</string>
    <string name="ubicacion_B">12.2345, 23.7654</string>

    <string name="bienvenido">¡Bienvenido!</string>
    <string name="no_miembro">¿No eres miembro?</string>
    <string name="registrar">Regístrate</string>
    <string name="texto_mensaje_bienvenida">¡Nos da gusto verte!</string>
    <string name="ingresar">Ingresar</string>
    <string name="hola">¡Hola!</string>
    <string name="si_miembro">Ya soy miembro</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="nombre_btc">Nombre de la Bitácora</string>
    <string name="descripcion_btc">Descripcion de la Bitácora</string>
    <string name="generar">Generar</string>
    <string name="nueva_btc">Nueva bitácora</string>


</resources>
