<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal"
    android:id="@+id/paint_colors" >


    <ImageButton
        android:id="@+id/small_brush"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/small"
        android:scaleY="1"
        android:scaleX="1"
        android:backgroundTint="@color/color_white"
        android:contentDescription="@string/sml"
        android:onClick="paintClicked"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        />

    <ImageButton
        android:id="@+id/medium_brush"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/medium"
        android:backgroundTint="@color/color_white"
        android:contentDescription="@string/med"
        android:onClick="paintClicked"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        />

    <ImageButton
        android:id="@+id/large_brush"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/large"
        android:backgroundTint="@color/color_white"
        android:contentDescription="@string/lrg"
        android:onClick="paintClicked"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        />


</LinearLayout>