<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sesiones.Registro">

    <TextView
        android:id="@+id/tv_no_miembro3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/light"
        android:text="@string/si_miembro"
        android:textColor="@color/cafe2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrate_r"
        app:layout_constraintVertical_bias="0.736" />

    <TextView
        android:id="@+id/tv_inicia_ru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bold"
        android:text="@string/inicia_sesion"
        android:textColor="@color/verde3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_no_miembro3"
        app:layout_constraintTop_toBottomOf="@+id/et_clave2_r"
        app:layout_constraintVertical_bias="0.848" />

    <EditText
        android:id="@+id/et_nombre_r"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/input_file"
        android:ems="10"
        android:hint="@string/nombreUsuario_RU"
        android:inputType="textPersonName"
        android:textColorHint="@color/cafe2"
        android:textColor="@color/cafe2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_apellido_r"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/input_file"
        android:ems="10"
        android:hint="@string/apellidoUsuario_RU"
        android:inputType="textPersonName"
        android:textColorHint="@color/cafe2"
        android:textColor="@color/cafe2"
        app:layout_constraintBottom_toTopOf="@+id/et_correo_r"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_r"
        app:layout_constraintVertical_bias="0.63" />


    <EditText
        android:id="@+id/et_correo_r"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/input_file"
        android:ems="10"
        android:hint="@string/correo_IS"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/cafe2"
        android:textColor="@color/cafe2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apellido_r" />

    <EditText
        android:id="@+id/et_clave_r"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/clave_RU"
        android:textColorHint="@color/cafe2"
        android:textColor="@color/cafe2"
        android:background="@drawable/input_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_correo_r" />

    <EditText
        android:id="@+id/et_clave2_r"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirmarClava_RU"
        android:textColorHint="@color/cafe2"
        android:textColor="@color/cafe2"
        android:background="@drawable/input_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_clave_r"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_registrate_r"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton"
        android:fontFamily="@font/regular"
        android:text="@string/registrar"
        android:textAllCaps="false"
        android:textColor="@color/beige"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_clave2_r"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bold"
        android:text="@string/registrar"
        android:textColor="@color/cafe2"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/et_nombre_r"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <ImageView
        android:id="@+id/iv_regresar_r"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back" />




</androidx.constraintlayout.widget.ConstraintLayout>