<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrisLetra"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".Sesiones.InicioSesion">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="290dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/applogo" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/imageCorreo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="25dp"
                android:layout_toStartOf="@+id/et_correo_is"
                app:srcCompat="@drawable/email_35px" />

            <EditText
                android:id="@+id/et_correo_is"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="60dp"
                android:hint="@string/correo_IS"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageClave"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="25dp"
                android:layout_toStartOf="@+id/ed_clave_is"
                app:srcCompat="@drawable/password_35px" />

            <EditText
                android:id="@+id/ed_clave_is"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="60dp"
                android:hint="@string/clave_IS"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_ingresar_is"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="280dp"
                android:background="@color/colorNaranja"
                android:hint="@string/ingresar_IS"
                android:textAlignment="center"
                android:textColorHint="@color/colorGrisLetra" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="38dp"
                android:gravity="center_horizontal"
                android:text="@string/formar_IS"
                android:textColor="@color/colorAzulFuerte"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_registrarse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="78dp"
                android:gravity="center_horizontal"
                android:text="@string/registrate_IS"
                android:textColor="@color/colorAzulFuerte"
                android:textColorLink="@color/colorAzulFuerte"
                android:textSize="16dp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>